--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
             <a class="nav-link" href="/webrtc">WebRTC</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/for">Form</a>
+            <a class="nav-link" href="/form">Form</a>
           </li>
         </ul>
       </div>
