--- a/public/index.html
+++ b/public/index.html
@@ -46,13 +46,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/home">Home</a>
+            <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/webrtc">WebRTC</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/form">Form</a>
           </li>
         </ul>
       </div>
